--- a/assets/package.json
+++ b/assets/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "cpx": "^1.5.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb": "18.1.0",
@@ -67,16 +68,16 @@
       "class-methods-use-this": "off"
     }
   },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS -g tools/git/commitlint.js",
-      "pre-commit": "yarn precommit"
-    }
-  },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS -g commitlint.config.js",
+      "pre-commit": "yarn precommit"
+    }
   },
   "browserslist": {
     "production": [
